src/test/ui/parser/keyword-for-as-identifier.stderr
error: expected identifier, found keyword `for`
  --> $DIR/keyword-for-as-identifier.rs:4:9
   |
LL |     let for = "foo";
   |         ^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#for = "foo";
   |         ^^^^^

error: aborting due to previous error

